chore: splash screen

--- a/app.json
+++ b/app.json
@@ -4,12 +4,11 @@
     "slug": "timing",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffffm"
     },
     "assetBundlePatterns": [
       "**/*"
