--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffffm"
+      "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
       "**/*"
