--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/rubik": "^0.2.3",
+    "@heroicons/react": "^2.0.18",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native-stack": "^6.9.12",
-    "@react-navigation/stack": "^6.3.16",
     "@types/react": "~18.0.27",
     "expo": "~48.0.15",
+    "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
   },
   "private": true
