--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg": "13.4.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-linear-gradient": "~12.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
