--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@heroicons/react": "^2.0.18",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native-stack": "^6.9.12",
+    "@realm/react": "^0.4.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react": "~18.0.27",
     "@types/react-redux": "^7.1.25",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -25,10 +27,11 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-uuid": "^2.0.1",
     "react-redux": "^8.0.5",
+    "realm": "^11.9.0",
     "redux": "^4.2.1",
-    "typescript": "^4.9.4",
-    "expo-linear-gradient": "~12.1.2"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
