--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native": "0.71.8",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-svg": "13.4.0",
     "react-native-uuid": "^2.0.1",
     "react-redux": "^8.0.5",
