--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "start-native": "npx expo start --dev-client ",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web"
@@ -40,8 +41,7 @@
     "@babel/core": "^7.20.0",
     "@types/react-native-vector-icons": "^6.4.13",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.3.0",
-    "tailwindcss": "^3.3.2"
+    "prettier-plugin-tailwindcss": "^0.3.0"
   },
   "private": true
 }
